[gd_scene load_steps=21 format=3 uid="uid://03snnob5uow1"]

[ext_resource type="SpriteFrames" uid="uid://c3ixhnu256fxs" path="res://character_controller/sprite_frames.tres" id="1_o8lfe"]
[ext_resource type="Script" uid="uid://bgyus5ghfgqd0" path="res://character_controller/2d_character_controller.gd" id="1_qr5f8"]
[ext_resource type="Script" uid="uid://cihci01qsk7vc" path="res://character_controller/animated_sprite_2d_tool.gd" id="2_7v80m"]
[ext_resource type="PackedScene" uid="uid://dg5r27f36mn07" path="res://character_controller/components/ledge_detector.tscn" id="4_dfu32"]
[ext_resource type="Script" uid="uid://b4u3gi8hgjlet" path="res://character_controller/state_machine/state_machine.gd" id="4_t600w"]
[ext_resource type="Script" uid="uid://dl7ctbe0cv3c2" path="res://character_controller/input_map.gd" id="4_uc8sf"]
[ext_resource type="Script" uid="uid://duwoy3nkmvy38" path="res://character_controller/movement_variables.gd" id="5_gtgy5"]
[ext_resource type="Script" uid="uid://cwdjqvddxjqqg" path="res://character_controller/state_machine/states/grounded.gd" id="5_t600w"]
[ext_resource type="Script" uid="uid://dadlfrrf4y021" path="res://character_controller/state_machine/states/one_shot.gd" id="6_c7ixp"]
[ext_resource type="Script" uid="uid://cs6bis811k88n" path="res://character_controller/jump_air.gd" id="7_c7ixp"]
[ext_resource type="Script" uid="uid://bnbe7mxk8wsky" path="res://character_controller/state_machine/states/airborne.gd" id="7_qq781"]
[ext_resource type="Script" uid="uid://ke7ebekdcqfn" path="res://character_controller/state_machine/input_transition.gd" id="8_clehh"]
[ext_resource type="Script" uid="uid://cyspnbaj7tun" path="res://character_controller/state_machine/magic_transition.gd" id="12_8td1g"]
[ext_resource type="Script" uid="uid://dukw84gcuvd3d" path="res://character_controller/state_machine/states/hang.gd" id="14_c8t0d"]
[ext_resource type="Script" uid="uid://bdlrly1hkn1qa" path="res://character_controller/state_machine/dynamic_data_row.gd" id="14_xjsqf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qq781"]
size = Vector2(10, 29)

[sub_resource type="Resource" id="Resource_lankm"]
script = ExtResource("14_xjsqf")
object = NodePath("..")
property = "get_x_velocity"
metadata/_custom_type_script = "uid://bdlrly1hkn1qa"

[sub_resource type="Resource" id="Resource_uvokq"]
script = ExtResource("14_xjsqf")
object = NodePath("..")
property = "get_jump_accel_modifier"
metadata/_custom_type_script = "uid://bdlrly1hkn1qa"

[sub_resource type="Resource" id="Resource_xjsqf"]
script = ExtResource("14_xjsqf")
object = NodePath("../../../LedgeDetectorR")
property = "get_snap_point"
metadata/_custom_type_script = "uid://bdlrly1hkn1qa"

[sub_resource type="Resource" id="Resource_e2h5c"]
script = ExtResource("14_xjsqf")
object = NodePath("../../../LedgeDetectorL")
property = "get_snap_point"
metadata/_custom_type_script = "uid://bdlrly1hkn1qa"

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_qr5f8")
character_size = Vector2(10, 29)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1.5)
sprite_frames = ExtResource("1_o8lfe")
animation = &"idle"
autoplay = "idle"
script = ExtResource("2_7v80m")
fps = 12.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qq781")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -74)
zoom = Vector2(2, 2)
process_callback = 0
position_smoothing_enabled = true

[node name="LedgeDetectorR" parent="." instance=ExtResource("4_dfu32")]
unique_name_in_owner = true
position = Vector2(5, -14)

[node name="LedgeDetectorL" parent="." instance=ExtResource("4_dfu32")]
unique_name_in_owner = true
position = Vector2(-5, -14)
scale = Vector2(-1, 1)

[node name="InputMap" type="Node" parent="."]
script = ExtResource("4_uc8sf")

[node name="MovementVariables" type="Node" parent="."]
script = ExtResource("5_gtgy5")
fall_speed = 150.0
time_to_fall_speed = 0.1
jump_height = 70.0
jump_x_modifier = 1.15

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("default_state")]
script = ExtResource("4_t600w")
default_state = NodePath("Airborne")
is_root = true
metadata/_custom_type_script = "uid://b4u3gi8hgjlet"

[node name="Grounded" type="Node" parent="StateMachine" node_paths=PackedStringArray("input_map", "variables", "turnaround_state", "animated_sprite")]
script = ExtResource("5_t600w")
input_map = NodePath("../../InputMap")
variables = NodePath("../../MovementVariables")
turnaround_state = NodePath("../TurnAround")
animated_sprite = NodePath("../../AnimatedSprite2D")
walk_speed_animation_magic_number = 90.0
run_speed_animation_magic_number = 150.0
metadata/_custom_type_script = "uid://b3fwraueavvlt"

[node name="ToAttack" type="Node" parent="StateMachine/Grounded" node_paths=PackedStringArray("to_state")]
script = ExtResource("8_clehh")
input = "attack"
to_state = NodePath("../../Attack")
metadata/_custom_type_script = "uid://ke7ebekdcqfn"

[node name="ToAirborne" type="Node" parent="StateMachine/Grounded" node_paths=PackedStringArray("to_state")]
script = ExtResource("12_8td1g")
auto_check = true
condition = "not is_on_floor()"
to_state = NodePath("../../Airborne")
force_change_on_not_allowed = null
dynamic_data = Dictionary[String, ExtResource("14_xjsqf")]({
"speed_override": SubResource("Resource_lankm")
})
metadata/_custom_type_script = "uid://cyspnbaj7tun"

[node name="ToJumpSquat" type="Node" parent="StateMachine/Grounded" node_paths=PackedStringArray("to_state")]
script = ExtResource("8_clehh")
input = "jump"
to_state = NodePath("../../JumpSquat")
priority = 1
dynamic_data = Dictionary[String, ExtResource("14_xjsqf")]({
"speed_override": SubResource("Resource_uvokq")
})
metadata/_custom_type_script = "uid://ke7ebekdcqfn"

[node name="ToTurnaroundInScript" type="Node" parent="StateMachine/Grounded"]

[node name="JumpSquat" type="Node" parent="StateMachine" node_paths=PackedStringArray("to_state", "animated_sprite")]
script = ExtResource("6_c7ixp")
to_state = NodePath("../JumpAir")
animated_sprite = NodePath("../../AnimatedSprite2D")
animation_name = "land"
time_shortcut = true
time = 0.05
metadata/_custom_type_script = "uid://dadlfrrf4y021"

[node name="JumpAir" type="Node" parent="StateMachine" node_paths=PackedStringArray("input_map", "variables", "landing_state", "airborne_state", "animated_sprite")]
script = ExtResource("7_c7ixp")
input_map = NodePath("../../InputMap")
variables = NodePath("../../MovementVariables")
landing_state = NodePath("../Grounded")
airborne_state = NodePath("../Airborne")
animated_sprite = NodePath("../../AnimatedSprite2D")
metadata/_custom_type_script = "uid://b3fwraueavvlt"

[node name="Airborne" type="Node" parent="StateMachine" node_paths=PackedStringArray("input_map", "variables", "landing_state", "animated_sprite")]
script = ExtResource("7_qq781")
input_map = NodePath("../../InputMap")
variables = NodePath("../../MovementVariables")
landing_state = NodePath("../Grounded")
animated_sprite = NodePath("../../AnimatedSprite2D")
metadata/_custom_type_script = "uid://b3fwraueavvlt"

[node name="ToHangR" type="Node" parent="StateMachine/Airborne" node_paths=PackedStringArray("to_state")]
script = ExtResource("12_8td1g")
auto_check = true
condition = "ledge_detector_r.get_snap_point() != null and velocity.y > 0 and not looking_left"
to_state = NodePath("../../Hang")
force_change_on_not_allowed = null
dynamic_data = Dictionary[String, ExtResource("14_xjsqf")]({
"snap_point": SubResource("Resource_xjsqf")
})
metadata/_custom_type_script = "uid://cyspnbaj7tun"

[node name="ToHangL" type="Node" parent="StateMachine/Airborne" node_paths=PackedStringArray("to_state")]
script = ExtResource("12_8td1g")
auto_check = true
condition = "ledge_detector_l.get_snap_point() != null and velocity.y > 0 and looking_left"
to_state = NodePath("../../Hang")
force_change_on_not_allowed = null
dynamic_data = Dictionary[String, ExtResource("14_xjsqf")]({
"snap_point": SubResource("Resource_e2h5c")
})
metadata/_custom_type_script = "uid://cyspnbaj7tun"

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("to_state", "animated_sprite")]
script = ExtResource("6_c7ixp")
to_state = NodePath("../Grounded")
animated_sprite = NodePath("../../AnimatedSprite2D")
animation_name = "punch_jab"
override_x_movement = true
x_movement_delta = 10.0
metadata/_custom_type_script = "uid://dadlfrrf4y021"

[node name="TurnAround" type="Node" parent="StateMachine" node_paths=PackedStringArray("to_state", "animated_sprite")]
script = ExtResource("6_c7ixp")
to_state = NodePath("../Grounded")
animated_sprite = NodePath("../../AnimatedSprite2D")
animation_name = "slide"
time_shortcut = true
time = 0.1
override_x_movement = true
x_movement_delta = 10.0
metadata/_custom_type_script = "uid://dadlfrrf4y021"

[node name="Hang" type="Node" parent="StateMachine" node_paths=PackedStringArray("animated_sprite")]
script = ExtResource("14_c8t0d")
animated_sprite = NodePath("../../AnimatedSprite2D")
animation_name = "ledge_grab_climb"
metadata/_custom_type_script = "uid://b3fwraueavvlt"

[node name="ToAirborneOnDown" type="Node" parent="StateMachine/Hang" node_paths=PackedStringArray("to_state")]
script = ExtResource("8_clehh")
input = "down"
to_state = NodePath("../../Airborne")
metadata/_custom_type_script = "uid://ke7ebekdcqfn"

[node name="ToAirborneOnRight" type="Node" parent="StateMachine/Hang" node_paths=PackedStringArray("to_state")]
script = ExtResource("8_clehh")
input = "walk_right"
condition = "looking_left"
to_state = NodePath("../../Airborne")
metadata/_custom_type_script = "uid://ke7ebekdcqfn"

[node name="ToAirborneOnLeft" type="Node" parent="StateMachine/Hang" node_paths=PackedStringArray("to_state")]
script = ExtResource("8_clehh")
input = "walk_left"
condition = "not looking_left"
to_state = NodePath("../../Airborne")
metadata/_custom_type_script = "uid://ke7ebekdcqfn"

[node name="ToJumpAir" type="Node" parent="StateMachine/Hang" node_paths=PackedStringArray("to_state")]
script = ExtResource("8_clehh")
input = "jump"
to_state = NodePath("../../JumpAir")
metadata/_custom_type_script = "uid://ke7ebekdcqfn"
